--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
   margin: 0px 7px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
   border-radius: 3px;
+  min-height: 977px;
 }
 .sensors-header {
   display: flex;
@@ -81,6 +82,53 @@
 .sensors .sensors-settings__title.bottom span {
   transform: rotate(0deg);
 }
+.sensors .sensors-added {
+  display: flex;
+  align-items: center;
+  margin: 15px 20px;
+}
+.sensors .sensors-added__new {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.sensors .sensors-added__button {
+  position: relative;
+  background-color: #fdc605;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+.sensors .sensors-added__button:before {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 14px;
+  background-color: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.sensors .sensors-added__button:after {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 14px;
+  background-color: #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(90deg);
+}
+.sensors .sensors-added__title {
+  color: #fdc605;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+}
+.sensors .sensors-added__title::selection {
+  background: transparent;
+}
 .settings {
   flex: 0 0 30%;
   padding: 20px;
@@ -102,7 +150,7 @@ body {
 .content {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   margin: 0px -7px;
 }
 .line {
