--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -15,7 +15,7 @@ body {
 .content {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   margin: 0px -7px;
 }
 .line {
